--- a/index.html
+++ b/index.html
@@ -194,3 +194,12 @@
     </script>
 </body>
 </html>
+
+
+
+
+<head>
+    <meta charset="UTF-8">
+    <title>Sybase Server Info</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</head>
